k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isi-burger-service
  namespace: staging
spec:
  selector:
    app: isi-burger
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
